# PyLipID

./: README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: demo.rst
github/workflows/: ci.yml
pylipid/: __init__.py  _version.py
pylipid/api/: api.py
pylipid/func/: binding_site.py  interactions.py  kinetics.py
pylipid/plot/: koff.py  plot1d.py  plot2d.py
pylipid/util/: coordinate.py  corrcoef.py  directory.py
tests/funcs/: test_binding_site.py  test_clusterer.py  test_kinetics.py
tests/plots/: test_plot_1d.py
